--- a/config.toml
+++ b/config.toml
@@ -1,17 +1,14 @@
 baseurl = "/"
-title = "Ghostwriter example"
+title = "modelplotr"
 theme = "ghostwriter"
 languageCode = "en-us"
-copyright = "My Name"
+copyright = "Jurriaan Nagelkerke"
 disqusShortname = "XXX"
 googleAnalytics = "XXX"
 
-<<<<<<< HEAD
 # ignore certain files as recommended
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
-=======
->>>>>>> 45a1d979a9ec2aa8862872cf740c1cdda059d03d
 [Privacy]
 
 [Privacy.disqus]
@@ -23,7 +20,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     useSessionStorage = false
 
 [Author]
-    name = "My Name"
+    name = "Jurriaan Nagelkerke"
     profile = "https://google.com/+XXX"
 
 [Taxonomies]
@@ -31,8 +28,8 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
 [Params]
     intro = true
-    headline = "Ghostwriter example"
-    description = "Ghostwriter example description"
+    headline = "Introduction to modelplotr"
+    description = ""
     github = "https://github.com/XXX"
     gitlab = "https://gitlab.com/XXX"
     linkedin = "https://linkedin.com/in/XXX/"
